frontend/css/styles.css
.avatar-lg
{
	height:500px;
	width:300px;
}

.avatar-md
{
	height:100px;
	width:100px;
}

.avatar-sm
{
	height:40px;
	width:40px;
}

.avatar-mini
{
	height:20px;
	width:20px;
}

.alert {
	top: 60px;
	right: 5px;
}

.form-error p {
	color: red;
	margin-bottom: 0 !important;
}

.w-40 {
	width: 40%;
}

.w-60 {
	width: 60%;
}

.w-70 {
	width: 70%;
}

.w-25 {
	width: 25%;
}

.text-sm {
	font-size: 10px;
}

#gameMarginChart, #victoryLossChart {
	width: 600px !important;
	height: 600px !important;
}

#pongContent {
	width: 800px;
}

.pt-200 {
	padding-top: 200px;
}

.dotted-underline {
	text-decoration-style: dotted !important;
}

